Add closeNavbarOnClick functionality to navigation links and implement client carousel

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -41,11 +41,11 @@
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
-                <a href="#interior" class="nav-item nav-link">Interior</a>
-                <a href="#exterior" class="nav-item nav-link">Exterior</a>
-                <a href="#walkthrough" class="nav-item nav-link">Walkthrough</a>
-                <a href="#locationav" class="nav-item nav-link">Location A/V</a>
-                <a href="#cgi" class="nav-item nav-link">CGI</a>
+                <a href="#interior" class="nav-item nav-link" onclick=closeNavbarOnClick()>Interior</a>
+                <a href="#exterior" class="nav-item nav-link" onclick=closeNavbarOnClick()>Exterior</a>
+                <a href="#walkthrough" class="nav-item nav-link" onclick=closeNavbarOnClick()>Walkthrough</a>
+                <a href="#locationav" class="nav-item nav-link" onclick=closeNavbarOnClick()>Location A/V</a>
+                <a href="#cgi" class="nav-item nav-link" onclick=closeNavbarOnClick()>CGI</a>
 
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
