--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
                 <img class="navbar-img" src="img/Tech_Trique_logo.png">
             </a>
             <div class="navbar-nav ml-auto py-0">
-                <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#service" class="nav-item nav-link">Services</a>
-                <a href="#project" class="nav-item nav-link">Projects</a>
-                <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#home" class="nav-item nav-link active" onclick="closeNavbarOnClick()">Home</a>
+                <a href="#service" class="nav-item nav-link" onclick=closeNavbarOnClick()>Services</a>
+                <a href="#project" class="nav-item nav-link" onclick=closeNavbarOnClick()>Projects</a>
+                <a href="#clients" class="nav-item nav-link" onclick=closeNavbarOnClick()>Clients</a>
+                <a href="#testimonial" class="nav-item nav-link" onclick=closeNavbarOnClick()>Testimonials</a>
+                <a href="#about" class="nav-item nav-link" onclick=closeNavbarOnClick()>About</a>
+                <a href="#contact" class="nav-item nav-link" onclick=closeNavbarOnClick()>Contact</a>
             </div>
         </div>
     </nav>
@@ -325,6 +327,37 @@
             </div>
         </div>
     </div>
+    <!-- Team End -->
+
+    <!-- Client's scroller -->
+    <div class="container-fluid py-5" id="clients">
+        <div class="container py-5">
+            <div class="section-title position-relative text-center">
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Our Clients</h3>
+                <h1 class="font-secondary display-4">Our Esteemed Clients</h1>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-12">
+                    <div class="owl-carousel client-carousel">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                        <img src="../img/logo-search-grid-2x.png" alt="">
+                        <img src="../img/logo-search-grid-1x.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Client's scroller end -->
 
     <!-- Testimonial Start -->
     <div class="container-fluid py-5" id="testimonial">
