--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -41,8 +41,8 @@
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
-                <a href="#service" class="nav-item nav-link">Features</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#service" class="nav-item nav-link" onclick=closeNavbarOnClick()>Features</a>
+                <a href="#contact" class="nav-item nav-link" onclick=closeNavbarOnClick()>Contact</a>
             </div>
         </div>
     </nav>
