update button item count for responsiveness

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <a href="#project" class="nav-item nav-link" onclick=closeNavbarOnClick()>Projects</a>
                 <a href="#clients" class="nav-item nav-link" onclick=closeNavbarOnClick()>Clients</a>
                 <a href="#testimonial" class="nav-item nav-link" onclick=closeNavbarOnClick()>Testimonials</a>
-                <a href="#about" class="nav-item nav-link" onclick=closeNavbarOnClick()>About</a>
                 <a href="#contact" class="nav-item nav-link" onclick=closeNavbarOnClick()>Contact</a>
             </div>
         </div>
@@ -66,7 +65,7 @@
                             <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h3>
                             <!-- <h3 class="display-5 text-white mb-4">Projects Done: <span class="count-up" data-target="50" >0</span></h3>
                             <br> -->
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact" style="font-size: 1.2rem; width: 18rem;">Projects Done: </a>
+                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact" style="font-size: 1.15rem; width: 18rem;">Projects Done: </a>
                       </div>
                     </div>
                 </div>
@@ -252,7 +251,7 @@
 
 
     <!-- Gallery Start -->
-    <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
+    <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 35px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
             <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Our Recent Projects</h3>
             <h1 class="font-secondary display-4 text-white">Experience it yourself</h1>
@@ -347,7 +346,7 @@
         <div class="container py-5">
             <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
                 <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Testimonial</h3>
-                <h1 class="display-4">Our Clients Say</h1>
+                <h1 class="display-4">What they Say</h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -509,12 +508,6 @@
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
 
-    <script>
-        function closeIframe() {
-            const iframe = document.getElementById('projectFrame');
-            iframe.src = '';
-        }
-    </script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script>
