--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Virtual Tour Company" name="keywords">
-    <meta content="Virtual Tour Company" name="description">
+    <meta name="description" content="Tech Triq offers immersive 360° virtual tours around the world for real estate and businesses. Engage clients and boost marketing with interactive experiences">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
