--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Virtual Tour Company" name="keywords">
-    <meta content="Virtual Tour Company" name="description">
+    <meta name="description" content="Tech Triq offers immersive 360° virtual tours around the world for real estate and businesses. Engage clients and boost marketing with interactive experiences">
+
 
     <!-- Favicon -->
     <link href="../img/favicon.ico" rel="icon">
@@ -57,7 +58,7 @@
                     <iframe class="position-absolute" src="//storage.net-fs.com/hosting/8311954/3/" name="Drone Sample" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">Interactive Virtual Tour</h4>
+                            <h1 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">Interactive Virtual Tour</h1>
                             <h3 class="display-3 font-secondary text-white mb-4">Present • Engage • Sell</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
