Finish basic SEO

--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Virtual Tour Company" name="keywords">
-    <meta content="Virtual Tour Company" name="description">
-
+    <meta name="description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta name="keywords" content="Virtual Tour, 360° Tour, Real Estate, Interactive Tour, Aerial Tour, WebAR, Augmented Reality, Interior Design Rendering, Exterior Design Rendering, Walkthrough Video, Location A/V, CGI & Superimpose">
+    <meta name="author" content="Tech Triq">
+    
     <!-- Favicon -->
-    <link href="../img/favicon.ico" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
+
+    <!--Social Media Meta Tags -->
+    <meta property="og:title" content="Tech Triq - Virtual Tour Company">
+    <meta property="og:description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta property="og:image" content="https://raw.githubusercontent.com/tech-triq/tech-triq.github.io/refs/heads/main/img/Tech_Trique_logo.webp">
+    <meta property="og:url" content="https://tech-triq.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tech Triq - Virtual Tour Company">
+    <meta name="twitter:description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/tech-triq/tech-triq.github.io/refs/heads/main/img/Tech_Trique_logo.webp">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -308,19 +322,32 @@
                     <div class="col">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
-                            <p class="mb-4 m-md-0">#6, Meghdoot Building, 6, Gulmohar Cross Road, JVPD Scheme, Mumbai: 400049</p>
+                            <p class="mb-4 m-md-0">#&#054;,&#032;&#077;&#101;&#103;&#104;&#100;&#111;&#111;&#116;&#032;&#066;&#117;&#105;&#108;&#100;&#105;&#110;&#103;,&#032;&#054;,&#032;&#071;&#117;&#108;&#109;&#111;&#104;&#097;&#114;&#032;&#067;&#114;&#111;&#115;&#115;&#032;&#082;&#111;&#097;&#100;,&#032;&#074;&#086;&#080;&#068;&#032;&#083;&#099;&#104;&#101;&#109;&#101;,&#032;&#077;&#117;&#109;&#098;&#097;&#105;:&#032;&#052;&#048;&#048;&#048;&#052;&#057;</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email Us</h5>
-                            <a class="mb-4 m-md-0" href="mailto:devvrshah@tech-triq.com" style="color: white;">devvrshah@tech-triq.com</a>
+                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Follow Us</h5>
+                            <div class="d-flex justify-content-center align-items-center" style="gap: 18px;">
+                                <a href="https://www.instagram.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="https://x.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-x-twitter"></i>
+                                </a>
+                                <a href="https://www.facebook.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/company/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
-                            <a class="m-0s" href="tel:+917710000963" style="color: white;">+91 7710000963</a>
+                            <a class="m-0s" href="tel:+917710000963" style="color: white;">+&#057;&#049;&#032;&#055;&#055;&#049;&#048;&#048;&#048;&#048;&#057;&#054;&#051;</a>
                         </div>
                     </div>
                 </div>
