--- a/index.html
+++ b/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Tech Triq offers immersive 360° virtual tours around the world for real estate and businesses. Engage clients and boost marketing with interactive experiences">
-
+    <meta name="description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta name="keywords" content="Virtual Tour, 360° Tour, Real Estate, Interactive Tour, Aerial Tour, WebAR, Augmented Reality, Interior Design Rendering, Exterior Design Rendering, Walkthrough Video, Location A/V, CGI & Superimpose">
+    <meta name="author" content="Tech Triq">
+    
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
+
+    <!--Social Media Meta Tags -->
+    <meta property="og:title" content="Tech Triq - Virtual Tour Company">
+    <meta property="og:description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta property="og:image" content="https://raw.githubusercontent.com/tech-triq/tech-triq.github.io/refs/heads/main/img/Tech_Trique_logo.webp">
+    <meta property="og:url" content="https://tech-triq.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tech Triq - Virtual Tour Company">
+    <meta name="twitter:description" content="Tech Triq creates immersive 360° virtual tours for real estate and businesses. Engage your audience, showcase properties, and boost marketing with interactive digital experiences">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/tech-triq/tech-triq.github.io/refs/heads/main/img/Tech_Trique_logo.webp">
+
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@500;700&display=swap" rel="stylesheet"> 
 
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -63,21 +78,10 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-2" style="max-width: 900px;">
                             <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h3>
-                            <!-- <h3 class="display-5 text-white mb-4">Projects Done: <span class="count-up" data-target="50" >0</span></h3>
-                            <br> -->
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll count-up" data-target="50" href="#contact" style="font-size: 1.15rem; width: 18rem;">Projects Done: </a>
                       </div>
                     </div>
                 </div>
-               <!--  <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">Tech Triq</h3>
-                            <h3 class="display-3 font-secondary text-white mb-4">Bringing Properties to Life with Interactive Real Estate Experiences</h3>
-                            <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
-                        </div>
-                    </div>
-                </div> -->
 
             </div>
         </div>
@@ -106,24 +110,6 @@
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Unlock the World – Virtually</h3>
                     <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Experiences</span> for your Product</h1>
                     <p>At Tech-Triq, we don't just create tours, we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before</p>
-                    <!-- <h4 class="text-uppercase text-primary mb-3">Why work with us?</h4> -->
-                    <!-- <ul>
-                        <li>
-                            <span class="text-bullet">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
-                        </li>
-                        <li>
-                            <span class="text-bullet">Interactive Elements: </span>Enrich your Tour with Interactive Hotspots, Multimedia elements
-                        </li>
-                        <li>
-                            <span class="text-bullet">Custom Design & Branding: </span>Trailor each tour to perfectly to your Brand & Objective
-                        </li>
-                        <li>
-                            <span class="text-bullet">Cross-Platform Compatibility: </span>Our tours are seamlessly accessible on desktops, tablets, and smartphones
-                        </li>
-                        <li>
-                            <span class="text-bullet">Detailed Analytics: </span>Know your customers and behaviour with our detailed analytics
-                        </li>
-                    </ul> -->
                     <br>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">See our Services</a>
                 </div>
@@ -437,19 +423,32 @@
                     <div class="col">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
-                            <p class="mb-4 m-md-0">#6, Meghdoot Building, 6, Gulmohar Cross Road, JVPD Scheme, Mumbai: 400049</p>
+                            <p class="mb-4 m-md-0">#&#054;,&#032;&#077;&#101;&#103;&#104;&#100;&#111;&#111;&#116;&#032;&#066;&#117;&#105;&#108;&#100;&#105;&#110;&#103;,&#032;&#054;,&#032;&#071;&#117;&#108;&#109;&#111;&#104;&#097;&#114;&#032;&#067;&#114;&#111;&#115;&#115;&#032;&#082;&#111;&#097;&#100;,&#032;&#074;&#086;&#080;&#068;&#032;&#083;&#099;&#104;&#101;&#109;&#101;,&#032;&#077;&#117;&#109;&#098;&#097;&#105;:&#032;&#052;&#048;&#048;&#048;&#052;&#057;</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email Us</h5>
-                            <a class="mb-4 m-md-0" href="mailto:devvrshah@tech-triq.com" style="color: white;">devvrshah@tech-triq.com</a>
+                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Follow Us</h5>
+                            <div class="d-flex justify-content-center align-items-center" style="gap: 18px;">
+                                <a href="https://www.instagram.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="https://x.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-x-twitter"></i>
+                                </a>
+                                <a href="https://www.facebook.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="https://www.linkedin.com/company/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
-                            <a class="m-0s" href="tel:+917710000963" style="color: white;">+91 7710000963</a>
+                            <a class="m-0s" href="tel:+917710000963" style="color: white;">+&#057;&#049;&#032;&#055;&#055;&#049;&#048;&#048;&#048;&#048;&#057;&#054;&#051;</a>
                         </div>
                     </div>
                 </div>
