--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -327,16 +327,16 @@
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Follow Us</h5>
                             <div class="d-flex justify-content-center align-items-center" style="gap: 18px;">
-                                <a href="https://www.instagram.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                <a href="https://www.instagram.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="https://x.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                <a href="https://x.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-x-twitter"></i>
                                 </a>
-                                <a href="https://www.facebook.com/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                <a href="https://www.facebook.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/company/techtriq360" target="_blank" style="color: white; font-size: 1.7rem;">
+                                <a href="https://www.linkedin.com/company/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </div>
@@ -353,7 +353,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-white text-center border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .05) !important;">
-        <p class="m-0 text-white">&copy; <span id="currentYear"></span> <a href="#">tech-triq.com</a>. All Rights Reserved. Designed by <a href="https://infinitysquaredtech.com" target="_blank">Infinity Squared Technologies</a></p>
+        <p class="m-0 text-white">&copy; <span id="currentYear"></span> <a href="#">tech-triq.com</a>. All Rights Reserved. Designed by <a href="https://infinitysquaredtech.com" target="_blank" rel="noopener noreferrer">Infinity Squared Technologies</a></p>
     </div>
     <!-- Footer End -->
 
