fix SEO bug - clean js & css

--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="../lib/lightbox/css/lightbox.min.css">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style.min.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
