--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="../lib/lightbox/css/lightbox.min.css">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.min.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
