--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Tech Triq">
     
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="../img/favicon.ico" rel="icon">
 
     <!--Social Media Meta Tags -->
     <meta property="og:title" content="Tech Triq - Virtual Tour Company">
