Bugfix - 26th May

--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -62,6 +62,11 @@
     </nav>
     <!-- Navbar End -->
 
+    <!-- Scroll to Bottom -->
+    <i class="fa fa-3x fa-angle-down text-white scroll-to-bottom"></i>
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-outline-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 pb-5" id="home">
@@ -172,9 +177,6 @@
                                 <p>Our AI-based tracking surpasses performance of traditional Computer-vision model in other WebAR systems</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">AI Image Tracking</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
@@ -184,9 +186,6 @@
                             <a class="btn btn-project-features">
                                 <p>Rotate, zoom, and examine the product from every angle – uncovering hidden details</p>
                             </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Interactive 3D Model</h3>
                         </div>
                     </div>
                 </div>
@@ -198,9 +197,6 @@
                                 <p>Our WebAR system can be easily integrated to any of your new/exsisting product without any hassle</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Easy Integration</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
@@ -210,9 +206,6 @@
                             <a class="btn btn-project-features">
                                 <p>Works instantly and seamlessly on iOS, Android & Desktop – no downloads required!</p>
                             </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Cross-Platform</h3>
                         </div>
                     </div>
                 </div>
@@ -224,9 +217,6 @@
                                 <p>Compatible with major web browsers (Chrome, Safari, Firefox, Edge)</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Browser Compatibility</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
@@ -236,9 +226,6 @@
                             <a class="btn btn-project-features">
                                 <p>Our system is completely build in JavaScript, lighter than ever - no waiting for downloads or streaming</p>
                             </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Instant Loading</h3>
                         </div>
                     </div>
                 </div>
@@ -250,9 +237,6 @@
                                 <p>Add interactive elements to your Brouchure to display information about your project to increase engagement</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Interactive Elements</h3>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
@@ -262,9 +246,6 @@
                             <a class="btn btn-project-features">
                                 <p>We optimize your 3D models for fast loading times – ensuring a smooth, seamless experience across devices</p>
                             </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Optimized File Size</h3>
                         </div>
                     </div>
                 </div>
@@ -320,24 +301,18 @@
                 <div class="row p-4" style="background: rgba(256, 256, 256, .05);">
                     <div class="col">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
-                            <p class="mb-4 m-md-0">#&#054;,&#032;&#077;&#101;&#103;&#104;&#100;&#111;&#111;&#116;&#032;&#066;&#117;&#105;&#108;&#100;&#105;&#110;&#103;,&#032;&#054;,&#032;&#071;&#117;&#108;&#109;&#111;&#104;&#097;&#114;&#032;&#067;&#114;&#111;&#115;&#115;&#032;&#082;&#111;&#097;&#100;,&#032;&#074;&#086;&#080;&#068;&#032;&#083;&#099;&#104;&#101;&#109;&#101;,&#032;&#077;&#117;&#109;&#098;&#097;&#105;:&#032;&#052;&#048;&#048;&#048;&#052;&#057;</p>
+                            <h5 class="text-primary text-uppercase mb-2" style="display: flex; justify-content: center; letter-spacing: 5px;">Our Office</h5>
+                            <p class="mb-4 m-md-0" style="text-align: center;">#&#054;,&#032;&#077;&#101;&#103;&#104;&#100;&#111;&#111;&#116;&#032;&#066;&#117;&#105;&#108;&#100;&#105;&#110;&#103;,&#032;&#054;,&#032;&#071;&#117;&#108;&#109;&#111;&#104;&#097;&#114;&#032;&#067;&#114;&#111;&#115;&#115;&#032;&#082;&#111;&#097;&#100;,&#032;&#074;&#086;&#080;&#068;&#032;&#083;&#099;&#104;&#101;&#109;&#101;,&#032;&#077;&#117;&#109;&#098;&#097;&#105;:&#032;&#052;&#048;&#048;&#048;&#052;&#057;</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Follow Us</h5>
-                            <div class="d-flex justify-content-center align-items-center" style="gap: 18px;">
-                                <a href="https://www.instagram.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
+                            <h5 class="text-primary text-uppercase mb-2" style="display: flex; justify-content: center; letter-spacing: 5px;">Follow Us</h5>
+                            <div class="mb-4 d-flex justify-content-center align-items-center" style="gap: 18px;">
+                                <a href="https://www.instagram.com/tech_triq_" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="https://x.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
-                                    <i class="fab fa-x-twitter"></i>
-                                </a>
-                                <a href="https://www.facebook.com/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="https://www.linkedin.com/company/techtriq360" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
+                                <a href="https://www.linkedin.com/in/tech-triq-298063346" target="_blank" rel="noopener noreferrer" style="color: white; font-size: 1.7rem;">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </div>
@@ -345,8 +320,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
-                            <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
-                            <a class="m-0s" href="tel:+917710000963" style="color: white;">+&#057;&#049;&#032;&#055;&#055;&#049;&#048;&#048;&#048;&#048;&#057;&#054;&#051;</a>
+                            <h5 class="text-primary text-uppercase mb-2" style="display: flex; justify-content: center; letter-spacing: 5px;">Call Us</h5>
+                            <a class="m-0s" href="tel:+917710000963" style="display: flex; justify-content: center; color: white;">+&#057;&#049;&#032;&#055;&#055;&#049;&#048;&#048;&#048;&#048;&#057;&#054;&#051;</a>
                         </div>
                     </div>
                 </div>
@@ -357,13 +332,6 @@
         <p class="m-0 text-white">&copy; <span id="currentYear"></span> <a href="#">tech-triq.com</a>. All Rights Reserved. Designed by <a href="https://infinitysquaredtech.com" target="_blank" rel="noopener noreferrer">Infinity Squared Technologies</a></p>
     </div>
     <!-- Footer End -->
-
-
-    <!-- Scroll to Bottom -->
-    <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-outline-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
