--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
-                        <source src="../video/ambit-2bhk.mp4" type="video/mp4">
+                        <source src="../video/interactivetour.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -129,13 +129,13 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
-                        <source src="../video/ambit-2bhk.mp4" type="video/mp4">
+                        <source src="../video/easynavigation.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interactive 360 Virtual Tour</h3>
                     <h2 class="display-4 mb-3">Easy to <span class="text-primary">Navigate</span></h2>
-                    <p>Step inside a world of effortless exploration. Our interactive virtual tours are designed for seamless navigation, allowing you to effortlessly <span class="text-primary">walk</span> through every room, pause, rewind, and re-examine any detail at your own pace. With intuitive controls and a clear, uncluttered interface, you’ll never feel lost or overwhelmed. Simply guide your gaze, click to explore, and discover the full potential of the property, it’s touring made easy</p>
+                    <p>Step inside a world of effortless exploration. Our interactive virtual tours are designed for seamless navigation, allowing you to effortlessly walk through every room, pause, rewind, and re-examine any detail at your own pace. With intuitive controls and a clear, uncluttered interface, you’ll never feel lost or overwhelmed. Simply guide your gaze, click to explore, and discover the full potential of the property, it’s touring made easy</p>
                 </div>
             </div>
         </div>
