--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
-                        <source src="../video/easy-share.mp4" type="video/mp4">
+                        <source src="../video/aerialinteractive.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
