update subject field fix across all pages

--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -301,6 +301,10 @@
                                 </div>
                             </div>
                             <div class="control-group">
+                                <input type="text" class="form-control bg-secondary border-0 py-4 px-3" id="subject" name="subject" placeholder="Your Subject" required="required" data-validation-required-message="Please enter your Subject" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group">
                                 <textarea class="form-control bg-secondary border-0 py-2 px-3" rows="6" id="message" name="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
