--- a/tours/ambit/project_1/index.html
+++ b/tours/ambit/project_1/index.html
@@ -33,7 +33,21 @@
 </head>
 <body>
   <div class="container">
-    <iframe src="//storage.net-fs.com/hosting/8311954/0/" name="Ambit" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe>
+    <iframe src="" name="Ambit" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe>
   </div>
+  <script type="text/javascript">
+    var urlParams = new URLSearchParams(window.location.search);
+    
+    // if urlParams has flat parameter and it is set to 3bhk then change the src of the iframe
+    if (urlParams.has('flat') && urlParams.get('flat') === 'jodi') {
+      document.querySelector('iframe').src = "//storage.net-fs.com/hosting/8311954/0/?media=JODI%20FLAT&sct=back_home,UI";
+    }
+    else if (urlParams.has('flat') && urlParams.get('flat') === '2bhk') {
+      document.querySelector('iframe').src = "//storage.net-fs.com/hosting/8311954/0/?media=2%20BHK&sct=back_home,UI";
+    }
+    else {
+      document.querySelector('iframe').src = "//storage.net-fs.com/hosting/8311954/0/";
+    }
+  </script>
 </body>
 </html>
