--- a/index.html
+++ b/index.html
@@ -311,19 +311,19 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="owl-carousel client-carousel">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-2x.png" alt="Client Logo">
-                        <img src="../img/logo-search-grid-1x.png" alt="Client Logo">
+                        <img src="../img/logos/logo-ambit.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-rajshree.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nyshaa.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-pebble.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
+                        <img src="../img/logos/logo-nexome.webp" alt="Client Logo">
                     </div>
                 </div>
             </div>
@@ -342,16 +342,16 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/logo-search-grid-1x.png" style="width: 200px;">
-                            <p style="font-size: 22px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                            <h4>Client Name</h4>
-                            <span>Company Name</span>
+                            <img class="img-fluid mx-auto mb-3" src="../img/logos/logo-ambit.webp" style="width: 200px;">
+                            <p style="font-size: 22px;">We were impressed by the exceptional quality of the 3D renderings and the stunning drone footage. The visuals brought our project to life and exceeded our expectations. The team was professional, creative and delivered on time. Highly recommend!</p>
+                            <h4>Abhishek Pandey</h4>
+                            <span>Ambit Developers & Realtors</span>
                         </div>
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/logo-search-grid-2x.png" style="width: 200px;">
-                            <p style="font-size: 22px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                            <h4>Client Name</h4>
-                            <span>Company Name</span>
+                            <img class="img-fluid mx-auto mb-3" src="../img/logos/logo-ambit.webp" style="width: 200px;">
+                            <p style="font-size: 22px;">We were impressed by the exceptional quality of the 3D renderings and the stunning drone footage. The visuals brought our project to life and exceeded our expectations. The team was professional, creative and delivered on time. Highly recommend!</p>
+                            <h4>Abhishek Pandey</h4>
+                            <span>Ambit Developers & Realtors</span>
                         </div>
                     </div>
                 </div>
